  * debian/patches/powerpc/submitted-gettimeofday-32.diff: Pull patch from
    Adhemerval Zanella at IBM to fix 32-bit gettimeofday VSYSCALL lookups.
  * debian/rules.d/build.mk, debian/sysdeps/{hurd,linux,kfreebsd}.mk: Make
    pt_chown keyed off a new variable that we can use to enable or disable
    it per kernel type rather than just the primary libc (Closes: #734607)

  [ Aurelien Jarno ]
  * debian/patches/any/cvs-vfscanf-0e+0.diff: new patch from upstream to
    fix parsing of 0e+0.  Closes: #732993.
  * debian/patches/mips/submitted-wordsize-clang.diff: drop now that clang
    correctly defines_MIPS_SZPTR.

  [ Samuel Thibault ]
  * patches/hurd-i386/tg-nfds-poll.diff: New patch to fix poll call with big
    array.
  * patches/hurd-i386/tg-sigstate_locking.diff: New patch to fix sigstate
    creation.
  * patches/hurd-i386/tg-sigstate_thread_reference.diff: New patch to fix
    sigstate thread reference counting.
  * patches/hurd-i386/{libpthreadlibpthread_stubs,libpthread_hurd_cond_wait,
    submitted-libpthread-elf,cvs-libpthread_lock,libpthread_cancellation,
    libpthread_hurd_cond_timedwait,libpthread_ctypes,cvs-pthread_atfork,
    cvs-tls-threadvar-threadself,cvs-libpthread-tls,
    cvs-libpthread-userstack}.diff: Remove, replaced by...
  * patches/hurd-i386/cvs-libpthread.diff: ... this git snapshot, and...
  * patches/hurd-i386/libpthread_build.diff: ... these build fixes.
  * patches/hurd-i386/tg-aio_misc.diff: New patch to fix aio build.
  * control.d/main: Build-depend on newer gnumach-dev to get
    thread_terminate_release RPC.
  * libc0.3.symbols.hurd-i386: Add thread_terminate_release.

 -- Adam Conrad <adconrad@ubuntu.com>  Tue, 10 Dec 2013 01:59:47 -0700

eglibc (2.18-0experimental0) experimental; urgency=low

  [ Adam Conrad ]
  * New upstream release: version 2.18, orig tarball built at SVN r24653:
    - patches/alpha/local-string-functions.diff: Rebased.
    - patches/alpha/submitted-PTR_MANGLE.diff: Rebased.