@@ -19,6 +19,8 @@ eglibc (2.18-0experimental1) UNRELEASED; urgency=low
   * debian/rules.d/build.mk, debian/sysdeps/{hurd,linux,kfreebsd}.mk: Make
     pt_chown keyed off a new variable that we can use to enable or disable
     it per kernel type rather than just the primary libc (Closes: #734607)
+  * debian/patches/kfreebsd/submitted-waitid.diff: On Linux, we must undef
+    waitflags before we define them or we'll conflict with kernel headers.
 
   [ Aurelien Jarno ]
   * debian/patches/any/cvs-vfscanf-0e+0.diff: new patch from upstream to
